src/test/compile-fail/reserved-f16.rs
// error-pattern:reserved keyword

fn main() {
  let int f16 = 0;
}
